# py-config

./: .gitignore  README.md  pyproject.toml
src/py_config/: base_config.py
test/: base_config_test.py
