[tool.poetry]
name = "py-config"
version = "0.1.0"
description = "Python configuration system built on Pydantic"
authors = ["Nate Atkins <atkinsnw@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.8.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
